fixed letter spacing and started modal popup

--- a/Phase 2/Site/styles/conference.css
+++ b/Phase 2/Site/styles/conference.css
@@ -15,6 +15,8 @@ red    - #EF413D
 
 #interplayIcon {
 	width: 100%;
+	margin: 0 auto;
+	display: block;
 }
 @media (min-width: 500px) {
 	#interplayIcon {
