--- a/Phase 2/Site/styles/personGrid.css
+++ b/Phase 2/Site/styles/personGrid.css
@@ -54,3 +54,62 @@
 		display: block;
 	}
 }
+
+/**/
+/* Modal Popup */
+/**/
+
+#modalPopup {
+	position: relative;
+	
+	background-color: wheat;
+	border: 2px solid #00B5AD;
+	
+	width: 80%;	
+	max-height: 80vh;
+	overflow: scroll;
+	
+	margin: 0 auto;
+	
+	padding: 30px;
+	
+/*	z-index:1000000;*/
+}
+.personImg-border-modal {
+	width: 60vw;
+	max-width: 320px;
+	
+	position: absolute;
+	top: 30px;
+	left: 50%;
+	transform: translateX(-50%);
+	-webkit-transform: translateX(-50%);
+	
+	z-index: 1;
+	
+	pointer-events: none;
+}
+.personImg-modal {
+	border-radius: 50%;
+	width: 60vw;
+	padding-top: 60vw; /*to set the same as width, because height: 100% isn't working */
+	
+	margin: 0 auto;
+	
+	background: linear-gradient(transparent, transparent),
+					 url('../images/team/fun-Eitan.jpg') no-repeat;
+	background: -webkit-linear-gradient(transparent, transparent),
+				 url('../images/team/fun-Eitan.jpg') no-repeat;
+	background-size: contain;
+}
+
+#lean_overlay {
+    position: fixed;
+    z-index:100;
+    top: 0px;
+    left: 0px;
+    height:100%;
+    width:100%;
+    background: #000;
+    display: none;
+}
