--- a/Phase 2/Site/styles/typefaces.css
+++ b/Phase 2/Site/styles/typefaces.css
@@ -46,7 +46,7 @@ h1 {
 	transition: all 0.2s;
 }
 
-.capsTitle {
+.bannerText {
 	letter-spacing: 0.1em;
 }
 .navTitle {
